tests/baselines/reference/bigIntWithTargetLessThanES2016.errors.txt
tests/cases/compiler/bigIntWithTargetLessThanES2016.ts(1,1): error TS2791: Exponentiation cannot be performed on 'bigint' values unless the 'target' option is set to 'es2016' or later.
tests/cases/compiler/bigIntWithTargetLessThanES2016.ts(4,1): error TS2791: Exponentiation cannot be performed on 'bigint' values unless the 'target' option is set to 'es2016' or later.


==== tests/cases/compiler/bigIntWithTargetLessThanES2016.ts (2 errors) ====
    BigInt(1) ** BigInt(1); // should error
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2791: Exponentiation cannot be performed on 'bigint' values unless the 'target' option is set to 'es2016' or later.
    
    let foo = BigInt(2);
    foo **= BigInt(2); // should error
    ~~~~~~~~~~~~~~~~~
!!! error TS2791: Exponentiation cannot be performed on 'bigint' values unless the 'target' option is set to 'es2016' or later.
    